--- a/app/templates/components/application-header.hbs
+++ b/app/templates/components/application-header.hbs
@@ -1,5 +1,5 @@
 <!-- Logo -->
-{{#link-to "index" class="logo"}}<b>Ember</b>DASHBOARD{{/link-to}}
+{{#link-to "index" class="logo"}}<b>ESKCAPE</b>dashboard{{/link-to}}
 <!-- Header Navbar: style can be found in header.less -->
 <nav class="navbar navbar-static-top" role="navigation">
   <!-- Sidebar toggle button-->
@@ -200,16 +200,15 @@
       <!-- User Account: style can be found in dropdown.less -->
       <li class="dropdown user user-menu">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-          <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image"/>
-          <span class="hidden-xs">Alexander Pierce</span>
+          <img src={{session.currentUser.photoURL}} class="user-image" alt="User Image"/>
+          <span class="hidden-xs">{{session.currentUser.displayName}}</span>
         </a>
         <ul class="dropdown-menu">
           <!-- User image -->
           <li class="user-header">
-            <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
+            <img src={{session.currentUser.photoURL}} class="img-circle" alt="User Image" />
             <p>
-              Alexander Pierce - Web Developer
-              <small>Member since Nov. 2012</small>
+              {{session.currentUser.displayName}}
             </p>
           </li>
           <!-- Menu Body -->
@@ -226,9 +225,6 @@
           </li>
           <!-- Menu Footer-->
           <li class="user-footer">
-            <div class="pull-left">
-              <a href="#" class="btn btn-default btn-flat">Profile</a>
-            </div>
             <div class="pull-right">
               <a href="#" class="btn btn-default btn-flat">Sign out</a>
             </div>
